# BetterQQNT-Launcher

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
include/bqqenv/: common.hpp  main.hpp  stdafx.hpp
src/: common.cpp  env.cpp  env.rc  inj.cpp  inj.rc  main.cpp
